# apache-airflow-testing

./: .gitignore  README.md  docker-compose.yaml  poetry.toml  pyproject.toml  starwars.json
dags/: 1_simple_dag.py  2_http_dag.py  starwars-dag.py
tests/: conftest.py  test_http_dag.py  test_simple_dag.py
