[tool.poetry]
name = "apache-airflow-testing"
version = "0.1.0"
description = ""
authors = ["Stephen Dillon <yodareloaded@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
